@@ -63,6 +63,9 @@ struct fuse_ll {
 	int atomic_o_trunc;
 	int no_remote_lock;
 	int big_writes;
+	int splice_write;
+	int splice_move;
+	int splice_read;
 	int no_splice_write;
 	int no_splice_move;
 	int no_splice_read;
